Update release action and actions/github-script action
Also remove node_modules directory

--- a/.github/workflows/publish-action.yml
+++ b/.github/workflows/publish-action.yml
@@ -10,12 +10,12 @@ on:
 
 jobs:
   release:
-    name: GitHub Release
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
       - name: GitHub semver release
         uses: vivantehealth/github-semver-release-action@v0
         with:
-          default-bump: minor
+          default-bump: patch
