--- a/.github/workflows/publish-action.yml
+++ b/.github/workflows/publish-action.yml
@@ -20,4 +20,4 @@ jobs:
       - name: GitHub semver release
         uses: vivantehealth/github-semver-release-action@v0
         with:
-          default-bump: patch
+          default-bump: minor
